# oxtt

./: Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  typos.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: architecture.md  contracts.md  development.md
docs/decisions/: 0001-phase-compensated-low-branch-crossover.md  0002-single-stereo-linked-detector-per-band.md  0003-amount-as-slope-change-not-ratio.md  0004-no-raw-dry-mix.md  0005-jack-adapter-with-alsa-direct-deferred.md  0006-preset-band-values-are-a-compatibility-contract.md  0007-alsa-direct-not-cpal-for-pi-native-backend.md
examples/: connect_ports.rs  list_ports.rs  soak_recorder.rs  soak_source.rs
scripts/: pi-soak-test.sh
src/: bands.rs  cli.rs  dsp.rs  jack_host.rs  lib.rs  main.rs  params.rs
src/dsp/: compressor.rs  crossover.rs  envelope.rs  mod.rs  smooth.rs
src/params/: cli.rs  error.rs  model.rs  preset.rs  value.rs
tmp/: spec.md
