[package]
name = "oxtt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A 3-band upward/downward multiband compressor for JACK, inspired by Xfer Records OTT"
repository = "https://github.com/akiomik/oxtt"
license = "MIT OR Apache-2.0"
keywords = ["audio", "jack", "compressor", "dsp", "multiband"]
categories = ["multimedia::audio"]

[dependencies]
jack = "0.13"
signal-hook = "0.4"
thiserror = "2"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

absolute_paths = "warn"
cognitive_complexity = "warn"
exit = "warn"
expect_used = "allow"
missing_assert_message = "warn"
mod_module_files = "warn"
multiple_crate_versions = "allow"
panic = "warn"
unwrap_used = "warn"
