[package]
name = "oxtt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A 3-band upward/downward multiband compressor for JACK, inspired by Xfer Records OTT"
repository = "https://github.com/akiomik/oxtt"
license = "MIT OR Apache-2.0"
keywords = ["audio", "jack", "compressor", "dsp", "multiband"]
categories = ["multimedia::audio"]

[dependencies]
clap = { version = "4", features = ["derive"] }
jack = "0.13"
nutype = "0.7.0"
signal-hook = "0.4"
thiserror = "2"

[dev-dependencies]
no-panic = "0.1"
proptest = "1"

[profile.release]
# A single codegen unit lets LLVM inline and optimize across the whole crate,
# which `OttProcessor::process`/`reset`'s `#[no_panic]` proof
# (docs/contracts.md §6) needs to eliminate their panic paths (e.g. slice
# bounds checks) at `cargo test --release` time; the default of several
# parallel codegen units isn't aggressive enough for that proof to go
# through. Real release builds benefit the same way (better inlining across
# the real-time DSP path), just with a slower build.
codegen-units = 1
# Cargo always builds test/bench targets with unwind regardless of this
# setting, so `cargo test --release` (the no-panic proof above) is
# unaffected; this only changes the shipped binary, dropping unwind
# tables/landing pads since nothing in the real-time path unwinds.
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

absolute_paths = "warn"
cognitive_complexity = "warn"
disallowed_macros = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
exit = "warn"
expect_used = "allow"
missing_assert_message = "warn"
mod_module_files = "warn"
multiple_crate_versions = "allow"
panic = "warn"
str_to_string = "warn"
unwrap_used = "warn"
